removed /logins endpoint
